--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,12 +13,14 @@
 <h1 class="">Register</h1>
 <p class="signup-link register">Already have an account? <a asp-page="/Account/Login" asp-area="Identity">Log in</a></p>
 <form class="text-left" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-    <div class="form" asp-validation-summary="All">
+    <div  asp-validation-summary="All">
+       
+
 
         <div id="username-field" class="field-wrapper input">
             <label for="FirstName">First Name</label>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-            <input asp-for="Input.FirstName"  type="text" class="form-control" placeholder="e.g John">
+            <input asp-for="Input.FirstName" type="text" class="form-control" placeholder="e.g John">
             <span asp-validation-for="Input.FirstName"></span>
         </div>
         <div id="username-field" class="field-wrapper input">
@@ -69,14 +71,14 @@
             <span asp-validation-for="Input.ConfirmPassword"></span>
         </div>
 
-        <div class="field-wrapper terms_condition">
+        @*<div class="field-wrapper terms_condition">
             <div class="n-chk">
                 <label class="new-control new-checkbox checkbox-primary">
                     <input type="checkbox" class="new-control-input">
                     <span class="new-control-indicator"></span><span>I agree to the <a href="javascript:void(0);">  terms and conditions </a></span>
                 </label>
             </div>
-        </div>
+        </div>*@
 
         <div class="d-sm-flex justify-content-between">
             <div class="field-wrapper">
