--- a/Views/Projects/AssignMembers.cshtml
+++ b/Views/Projects/AssignMembers.cshtml
@@ -2,7 +2,7 @@
 <div class="container">
     <h2> Assign Users </h2>
 
-    <div class="row">
+    <div class="card col-6" style="margin:2px">
         <div class="col-md-4">
             <div class="panel panel-green margin-bottom-40">
                 <div class="panel-heading">
