--- a/Views/Projects/MyProjects.cshtml
+++ b/Views/Projects/MyProjects.cshtml
@@ -26,110 +26,7 @@
 
 
 <div class="row layout-top-spacing">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-12 layout-spacing">
-        <div class="widget widget-content-area br-4">
-            <div class="widget-one">
-
-
-                @*<p class="mb-0 mt-3" style="color: #888ea8;">With CORK starter kit, you can begin your work without any hassle. The starter page is highly optimized which gives you freedom to start with minimal code and add only the desired components and plugins required for your project.</p>*@
-
-            </div>
-        </div>
-    </div>
    
-    <div class="col-xl-4 col-lg-6 col-md-6 mb-4">
-        <div class="card b-l-card-1 h-100" style="-webkit-box-shadow: 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12), 0 3px 5px -1px rgba(0,0,0,.2); -moz-box-shadow: 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12), 0 3px 5px -1px rgba(0,0,0,.2); box-shadow: 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12), 0 3px 5px -1px rgba(0,0,0,.2); ">
-            <img class="card-img-top" src="~/assets/img/400x300.jpg" alt="Card image cap">
-            <div class="card-body">
-                @*<strong class="card-category">Trends</strong>*@
-                <h5 class="card-title mt-2">@user.FirstName's Projects</h5>
-                @*<p class="card-text meta-info meta-time mb-2">@role<small class=""></small></p>*@
-                <p class="card-text mb-4">Below is a list of all of the Projects You've Been assigned to.</p>
-                @*<button class="btn btn-outline-warning mt-2">Read More</button>*@
-            </div>
-        </div>
-    </div>
-    
-    @if (User.IsInRole("Admin"))
-    {
-        <div class="col-xl-8 col-lg-6 col-md-6 col-sm-12 col-12" style="margin-bottom:24px;">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
-                    <div class="row">
-                        <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                            <h4>Add New Project</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="widget-content widget-content-area" style="height: 571px;">
-
-                    <form>
-                        <div class="form-row mb-4">
-
-                            <div class="form-group col-md-6">
-                                <label>Project Name</label>
-                                <input type="text" class="form-control" id="inputPassword4">
-                            </div>
-                        </div>
-                        <div class="form-group mb-4">
-                            <label for="inputAddress">Description</label>
-                            <textarea rows="5" class="form-control" placeholder="Tell a little about this project"></textarea>
-                        </div>
-
-                        <div class="form-row mb-4">
-                            <div class="form-group col-md-6">
-                                <label>Start Date</label>
-                                <input type="date" class="form-control" id="inputCity">
-                            </div>
-                            @*<div class="form-group col-md-4">
-                                    <label for="inputState">State</label>
-                                    <select id="inputState" class="form-control">
-                                        <option selected="">Choose...</option>
-                                        <option>...</option>
-                                    </select>
-                                </div>*@
-                            <div class="form-group col-md-6">
-                                <label for="inputZip">End Date</label>
-                                <input type="date" class="form-control" id="inputZip">
-                            </div>
-                        </div>
-                        @*<div class="form-group">
-                                <div class="form-check pl-0">
-                                    <div class="custom-control custom-checkbox checkbox-info">
-                                        <input type="checkbox" class="custom-control-input" id="gridCheck">
-                                        <label class="custom-control-label" for="gridCheck">Check me out</label>
-                                    </div>
-                                </div>
-                            </div>*@
-                        <button type="submit" class="btn btn-primary mt-3 ">Add Project</button>
-                    </form>
-
-                </div>
-
-            </div>
-        </div>
-    }
-    @if (User.IsInRole("ProjectManager") || User.IsInRole("Developer") || User.IsInRole("Submitter"))
-    {
-
-        <div id="chartArea" class="col-xl-8 layout-spacing">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
-                    <div class="row">
-                        <div class="col-xl-8 col-md-6 col-sm-12 col-12">
-                            <h4>My Project Stats</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="widget-content widget-content-area">
-                    <div id="s-line-area" class=""></div>
-
-                    
-                </div>
-            </div>
-        </div>
-    }
     <div class="col-lg-12 col-md-12 layout-spacing">
         <div class="statbox widget box box-shadow">
             <div class="widget-header">
@@ -150,49 +47,58 @@
                                 <th class="text-center">Priority</th>
                                 <th class="text-center">Actions</th>
                             </tr>
-                        </thead>
+                        </thead> 
                         <tbody>
-                            @foreach (Project project in await ProjectService.GetUserProjectsAsync(user.Id))
+                            @if ((await ProjectService.GetUserProjectsAsync(user.Id)).Count() == 0)
                             {
-                                <tr>
-                                    <td><span class="badge badge-Danger-Light">@project.Name</span></td>
-                                    <td><span class="badge badge-dark">@project.Description</span></td>
-                                    <td><span class="badge badge-warning">@project.StartDate</span></td>
-                                    <td class="text-center"><span class="badge badge-success">@project.ProjectPriority</span></td>
-                                    <td class="text-center">
+                            <tr>
+                                <td class="text-center" colspan="5">No Projects Found.</td>
+                            </tr>
+                            
+                            }else{
 
-                                        <div class="dropdown custom-dropdown">
-                                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
-                                            </a>
-                                            @if (User.IsInRole("Admin"))
-                                            {
-                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
-                                                    <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">View Project Details</a>
-                                                    <a class="dropdown-item" asp-action="AssignMembers" asp-controller="Projects" asp-route-id="@project.Id">Assign Members</a>
-                                                    <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">Edit</a>
-                                                    <a class="dropdown-item" asp-action="Edit" asp-controller="Projects" asp-route-id="@project.Id">Archive This Project</a>
-                                                </div>
+                            @foreach (Project project in await ProjectService.GetUserProjectsAsync(user.Id))
+                                        {
+                                            <tr>
+                                                <td><span class="badge badge-Danger-Light">@project.Name</span></td>
+                                                <td><span class="badge badge-dark">@project.Description</span></td>
+                                                <td><span class="badge badge-warning">@project.StartDate</span></td>
+                                                <td class="text-center"><span class="badge badge-success">@project.ProjectPriority</span></td>
+                                                <td class="text-center">
 
-                                            }@if (User.IsInRole("ProjectManager"))
-                                            {
-                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
-                                                    <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">View Project Details</a>
-                                                    <a class="dropdown-item" asp-action="AssignMembers" asp-controller="Projects" asp-route-id="@project.Id">Assign Members</a>
-                                                </div>
-                                            }@if (User.IsInRole("Developer") || User.IsInRole("Submitter"))
-                                            {
-                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
-                                                    <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">View Project Details</a>
-                                                </div>
-                                            }
-                                        </div>
+                                                    <div class="dropdown custom-dropdown">
+                                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
+                                                        </a>
+                                                        @if (User.IsInRole("Admin"))
+                                                        {
+                                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
+                                                                <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">View Project Details</a>
+                                                                <a class="dropdown-item" asp-action="AssignMembers" asp-controller="Projects" asp-route-id="@project.Id">Assign Members</a>
+                                                                <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">Edit</a>
+                                                                <a class="dropdown-item" asp-action="Edit" asp-controller="Projects" asp-route-id="@project.Id">Archive This Project</a>
+                                                            </div>
 
-                                    </td>
-                                </tr>
+                                                        }@if (User.IsInRole("ProjectManager"))
+                                                        {
+                                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
+                                                                <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">View Project Details</a>
+                                                                <a class="dropdown-item" asp-action="AssignMembers" asp-controller="Projects" asp-route-id="@project.Id">Assign Members</a>
+                                                            </div>
+                                                        }@if (User.IsInRole("Developer") || User.IsInRole("Submitter"))
+                                                        {
+                                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
+                                                                <a class="dropdown-item" asp-action="Details" asp-controller="Projects" asp-route-id="@project.Id">View Project Details</a>
+                                                            </div>
+                                                        }
+                                                    </div>
+
+                                                </td>
+                                            </tr>
+                                        }
                             }
 
-                    </table>
+</table>
                 </div>
             </div>
         </div>
