--- a/Views/Tickets/AllTickets.cshtml
+++ b/Views/Tickets/AllTickets.cshtml
@@ -28,7 +28,7 @@
                 <div class="col-md-12 col-sm-12 col-12 text-center">
                     <a id="btn-add-notes" class="btn btn-primary rounded bs-tooltip" title="Add a New Ticket" data-toggle="modal" data-target="#notesMailModal">Add</a>
                 </div>
-                <div class="col-md-12 col-sm-12 col-12 mt-5">
+                @*<div class="col-md-12 col-sm-12 col-12 mt-5">
                     <ul class="nav nav-pills d-block" id="pills-tab3" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link list-actions active" id="all-notes"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg> All Notes</a>
@@ -56,7 +56,7 @@
                             <a class="nav-link list-actions g-dot-danger" id="note-important">Important</a>
                         </li>
                     </ul>
-                </div>
+                </div>*@
             </div>
         </div>
 
@@ -69,13 +69,14 @@
                             <p class="note-title" data-noteTitle="Meeting with Kelly"> @Html.DisplayFor(modelItem => item.Title)</p>
                             <p class="meta-time"> @Html.DisplayFor(modelItem => item.Created)</p>
                             <div class="note-description-content">
-                                <p class="note-description" data-noteDescription="Curabitur facilisis vel elit sed dapibus sodales purus rhoncus."> @Html.DisplayFor(modelItem => item.Created)</p>
+                                <p class="note-description" data-noteDescription="Curabitur facilisis vel elit sed dapibus sodales purus rhoncus."> @Html.DisplayFor(modelItem => item.Description)</p>
                             </div>
                         </div>
                         <div class="note-action">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star fav-note"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 delete-note"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                            <svg hidden xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star fav-note"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+                            <svg hidden xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 delete-note"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
                         </div>
+                        @*<--------------------INSTERT SWITCH CASE HERE----------------->*@
                         <div class="note-footer">
                             <div class="tags-selector btn-group">
                                 <a class="nav-link dropdown-toggle d-icon label-group" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">
@@ -87,12 +88,21 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
                                     </div>
                                 </a>
-                                <div class="dropdown-menu dropdown-menu-right d-icon-menu">
-                                    <a class="note-personal label-group-item label-personal dropdown-item position-relative g-dot-personal" href="javascript:void(0);"> Personal</a>
-                                    <a class="note-work label-group-item label-work dropdown-item position-relative g-dot-work" href="javascript:void(0);"> Work</a>
-                                    <a class="note-social label-group-item label-social dropdown-item position-relative g-dot-social" href="javascript:void(0);"> Social</a>
-                                    <a class="note-important label-group-item label-important dropdown-item position-relative g-dot-important" href="javascript:void(0);"> Important</a>
-                                </div>
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <div class="dropdown-menu dropdown-menu-right d-icon-menu">
+                                        <a class="note-personal label-group-item label-personal dropdown-item position-relative g-dot-personal" asp-action="Details" asp-controller="Tickets" asp-route-id="@item.Id"> View Ticket Details</a>
+                                        <a class="note-work label-group-item label-work dropdown-item position-relative g-dot-work" asp-action="Edit" asp-controller="Tickets" asp-route-id="@item.Id"> Edit This Ticket</a>
+                                        @*<a class="note-social label-group-item label-social dropdown-item position-relative g-dot-social" asp-action="Archive" asp-controller="Tickets" asp-route-id="@item.Id"> Archive This Ticket</a>*@
+                                    </div>
+                                } @if (User.IsInRole("Project Manager") || User.IsInRole("Developer") || User.IsInRole("Submitter"))
+                                {
+                                    <div class="dropdown-menu dropdown-menu-right d-icon-menu">
+                                        <a class="note-personal label-group-item label-personal dropdown-item position-relative g-dot-personal" asp-action="Details" asp-controller="Tickets" asp-route-id="@item.Id"> View Ticket Details</a>
+                                        <a class="note-work label-group-item label-work dropdown-item position-relative g-dot-work" asp-action="Edit" asp-controller="Tickets" asp-route-id="@item.Id"> Edit This Ticket</a>
+                                        @*<a class="note-social label-group-item label-social dropdown-item position-relative g-dot-social" asp-action="Archive" asp-controller="Tickets" asp-route-id="@item.Id"> Archive This Ticket</a>*@
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
